Update distance endpoint
